domain/id_macros/tests/ui/non-unit-struct.rs
use id_macros::id;

#[id]
pub struct NonUnitId {
    raw: u64,
}

fn main() {}
